--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node src/app.ts",
-    "pull1" : "npx prisma db pull --schema=./prisma/schema1.prisma",
-    "pull3" : "npx prisma db pull --schema=./prisma/schema3.prisma",
-    "generate1" : "npx prisma generate --schema=./prisma/schema1.prisma",
-    "generate2" : "npx prisma generate --schema=./prisma/schema2.prisma",
-    "generate3" : "npx prisma generate --schema=./prisma/schema3.prisma",
-    "start": "bun run --watch src/app.ts"
+    "pull1": "npx prisma db pull --schema=./prisma/schema1.prisma",
+    "pull3": "npx prisma db pull --schema=./prisma/schema3.prisma",
+    "generate1": "npx prisma generate --schema=./prisma/schema1.prisma",
+    "generate2": "npx prisma generate --schema=./prisma/schema2.prisma",
+    "generate3": "npx prisma generate --schema=./prisma/schema3.prisma",
+    "start": "bun run --watch src/app.ts",
+    "gas" : "nodemon src/app.ts"
   },
   "author": "Fauzi Ramdani",
   "license": "ISC",
@@ -24,7 +25,8 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
