--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node src/app.ts",
+    "pull1" : "npx prisma db pull --schema=./prisma/schema1.prisma",
+    "pull3" : "npx prisma db pull --schema=./prisma/schema3.prisma",
+    "generate1" : "npx prisma generate --schema=./prisma/schema1.prisma",
+    "generate2" : "npx prisma generate --schema=./prisma/schema2.prisma",
+    "generate3" : "npx prisma generate --schema=./prisma/schema3.prisma",
     "start": "bun run --watch src/app.ts"
   },
   "author": "Fauzi Ramdani",
