--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/app.ts",
+    "dev": "nodemon --exec ts-node src/app.ts",
     "start": "bun run --watch src/app.ts"
   },
   "author": "Fauzi Ramdani",
@@ -19,7 +19,8 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
