--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/app.ts",
+    "dev": "nodemon --exec ts-node src/app.ts",
     "pull1": "npx prisma db pull --schema=./prisma/schema1.prisma",
+    "pull2": "npx prisma db pull --schema=./prisma/schema2.prisma",
     "pull3": "npx prisma db pull --schema=./prisma/schema3.prisma",
     "generate1": "npx prisma generate --schema=./prisma/schema1.prisma",
     "generate2": "npx prisma generate --schema=./prisma/schema2.prisma",
