--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "career-backend",
+  "name": "digital-twin-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/app.ts",
-    "pull1": "npx prisma db pull --schema=./prisma/schema1.prisma",
-    "pull2": "npx prisma db pull --schema=./prisma/schema2.prisma",
-    "pull3": "npx prisma db pull --schema=./prisma/schema3.prisma",
-    "generate1": "npx prisma generate --schema=./prisma/schema1.prisma",
-    "generate2": "npx prisma generate --schema=./prisma/schema2.prisma",
-    "generate3": "npx prisma generate --schema=./prisma/schema3.prisma",
+    "push:digital_twin": "npx prisma db push --schema=./prisma/digital_twin_db.prisma",
+    "pull:digital_twin": "npx prisma db pull --schema=./prisma/digital_twin_db.prisma",
+    "pull:employment": "npx prisma db pull --schema=./prisma/employment_db.prisma",
+    "generate:digital_twin": "npx prisma generate --schema=./prisma/digital_twin_db.prisma",
+    "generate:employment": "npx prisma generate --schema=./prisma/employment_db.prisma",
     "start": "bun run --watch src/app.ts",
     "gas": "nodemon src/app.ts"
   },
-  "author": "Fauzi Ramdani",
+  "author": "estotriramdani",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.1",
