feat: update digital twin API to use production start command and add start:prod script in package.json

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "generate:scada": "npx prisma generate --schema=./prisma/scada_db.prisma",
 
     "start": "bun run --watch src/app.ts",
+    "start:prod": "ts-node src/app.ts",
     "gas": "nodemon src/app.ts"
   },
   "author": "estotriramdani",
