--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon --exec ts-node src/app.ts",
     "push:digital_twin": "npx prisma db push --schema=./prisma/digital_twin_db.prisma",
     "studio:digital_twin": "npx prisma studio --schema=./prisma/digital_twin_db.prisma",
-
     "pull:digital_twin": "npx prisma db pull --schema=./prisma/digital_twin_db.prisma",
     "pull:employment": "npx prisma db pull --schema=./prisma/employment_db.prisma",
     "pull:iot_data_raw": "npx prisma db pull --schema=./prisma/iot_data_raw_db.prisma",
@@ -16,7 +15,6 @@
     "pull:scada": "npx prisma db pull --schema=./prisma/scada_db.prisma",
     "pull:aio_iot_engineering": "npx prisma db pull --schema=./prisma/aio_iot_engineering_db.prisma",
     "pull:aio_iot": "npx prisma db pull --schema=./prisma/aio_iot_db.prisma",
-
     "generate:digital_twin": "npx prisma generate --schema=./prisma/digital_twin_db.prisma",
     "generate:employment": "npx prisma generate --schema=./prisma/employment_db.prisma",
     "generate:iot_data_raw": "npx prisma generate --schema=./prisma/iot_data_raw_db.prisma",
@@ -24,7 +22,6 @@
     "generate:scada": "npx prisma generate --schema=./prisma/scada_db.prisma",
     "generate:aio_iot_engineering": "npx prisma generate --schema=./prisma/aio_iot_engineering_db.prisma",
     "generate:aio_iot": "npx prisma generate --schema=./prisma/aio_iot_db.prisma",
-
     "start:bun": "bun run --watch src/app.ts",
     "start:prod": "ts-node src/app.ts",
     "start:dev": "nodemon src/app.ts"
@@ -39,6 +36,7 @@
     "express": "^4.19.2",
     "express-file-routing": "^3.0.2",
     "express-fileupload": "^1.5.1",
+    "file-system-cache": "^3.0.0-alpha.8",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "module-alias": "^2.2.3",
