--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "dev": "set NODE_OPTIONS=--max-old-space-size=8192 && nodemon --exec ts-node src/app.ts",
     "push:digital_twin": "npx prisma db push --schema=./prisma/digital_twin_db.prisma",
     "studio:digital_twin": "npx prisma studio --schema=./prisma/digital_twin_db.prisma",
     
@@ -17,6 +17,10 @@
     "pull:aio_iot_engineering": "npx prisma db pull --schema=./prisma/aio_iot_engineering_db.prisma",
     "pull:aio_iot": "npx prisma db pull --schema=./prisma/aio_iot_db.prisma",
     "pull:dwh": "npx prisma db pull --schema=./prisma/dwh_db.prisma",
+    "pull:aio_iot_oci1": "npx prisma db pull --schema=./prisma/aio_iot_oci1.prisma",
+    "pull:aio_iot_oci2": "npx prisma db pull --schema=./prisma/aio_iot_oci2.prisma",
+    "pull:node_red_kjy": "npx prisma db pull --schema=./prisma/node_red_kjy.prisma",
+    "pull:scada_db1_kjy": "npx prisma db pull --schema=./prisma/scada_db1_kjy.prisma",
 
     "generate:digital_twin": "npx prisma generate --schema=./prisma/digital_twin_db.prisma",
     "generate:employment": "npx prisma generate --schema=./prisma/employment_db.prisma",
@@ -26,6 +30,10 @@
     "generate:aio_iot_engineering": "npx prisma generate --schema=./prisma/aio_iot_engineering_db.prisma",
     "generate:aio_iot": "npx prisma generate --schema=./prisma/aio_iot_db.prisma",
     "generate:dwh": "npx prisma generate --schema=./prisma/dwh_db.prisma",
+    "generate:aio_iot_oci1": "npx prisma generate --schema=./prisma/aio_iot_oci1.prisma",
+    "generate:aio_iot_oci2": "npx prisma generate --schema=./prisma/aio_iot_oci2.prisma",
+    "generate:node_red_kjy": "npx prisma generate --schema=./prisma/node_red_kjy.prisma",
+    "generate:scada_db1_kjy": "npx prisma generate --schema=./prisma/scada_db1_kjy.prisma",
 
     "start:bun": "bun run --watch src/app.ts",
     "start:prod": "ts-node src/app.ts",
