--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ DATABASE_URL_DWH=
 DATABASE_URL_SCADA=
 DATABASE_URL_DF=
 DATABASE_URL_AIO_IOT=
+DATABASE_URL_AIO_IOT_OCI1=
+DATABASE_URL_AIO_IOT_OCI2=
+DATABASE_URL_NODE_RED_KJY=
+DATABASE_URL_SCADA_KJY=
 REFRESH_TOKEN_SECRET=f45c503d-6de6-400f-ac50-7774b2d76385
 ACCESS_TOKEN_SECRET=5e7b1b7b-1b7b-4b7b-9b7b-7b1b7b1b7b1b
 MODE=development
