init starter project

--- a/package.json
+++ b/package.json
@@ -1,44 +1,18 @@
 {
-  "name": "digital-twin-api",
+  "name": "express-file-router-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "set NODE_OPTIONS=--max-old-space-size=8192 && nodemon --exec ts-node src/app.ts",
-    "push:digital_twin": "npx prisma db push --schema=./prisma/digital_twin_db.prisma",
-    "studio:digital_twin": "npx prisma studio --schema=./prisma/digital_twin_db.prisma",
-    
-    "pull:digital_twin": "npx prisma db pull --schema=./prisma/digital_twin_db.prisma",
-    "pull:employment": "npx prisma db pull --schema=./prisma/employment_db.prisma",
-    "pull:iot_data_raw": "npx prisma db pull --schema=./prisma/iot_data_raw_db.prisma",
-    "pull:aveva_historian": "npx prisma db pull --schema=./prisma/aveva_historian_db.prisma",
-    "pull:scada": "npx prisma db pull --schema=./prisma/scada_db.prisma",
-    "pull:aio_iot_engineering": "npx prisma db pull --schema=./prisma/aio_iot_engineering_db.prisma",
-    "pull:aio_iot": "npx prisma db pull --schema=./prisma/aio_iot_db.prisma",
-    "pull:dwh": "npx prisma db pull --schema=./prisma/dwh_db.prisma",
-    "pull:aio_iot_oci1": "npx prisma db pull --schema=./prisma/aio_iot_oci1.prisma",
-    "pull:aio_iot_oci2": "npx prisma db pull --schema=./prisma/aio_iot_oci2.prisma",
-    "pull:node_red_kjy": "npx prisma db pull --schema=./prisma/node_red_kjy.prisma",
-    "pull:scada_db1_kjy": "npx prisma db pull --schema=./prisma/scada_db1_kjy.prisma",
-
-    "generate:digital_twin": "npx prisma generate --schema=./prisma/digital_twin_db.prisma",
-    "generate:employment": "npx prisma generate --schema=./prisma/employment_db.prisma",
-    "generate:iot_data_raw": "npx prisma generate --schema=./prisma/iot_data_raw_db.prisma",
-    "generate:aveva_historian": "npx prisma generate --schema=./prisma/aveva_historian_db.prisma",
-    "generate:scada": "npx prisma generate --schema=./prisma/scada_db.prisma",
-    "generate:aio_iot_engineering": "npx prisma generate --schema=./prisma/aio_iot_engineering_db.prisma",
-    "generate:aio_iot": "npx prisma generate --schema=./prisma/aio_iot_db.prisma",
-    "generate:dwh": "npx prisma generate --schema=./prisma/dwh_db.prisma",
-    "generate:aio_iot_oci1": "npx prisma generate --schema=./prisma/aio_iot_oci1.prisma",
-    "generate:aio_iot_oci2": "npx prisma generate --schema=./prisma/aio_iot_oci2.prisma",
-    "generate:node_red_kjy": "npx prisma generate --schema=./prisma/node_red_kjy.prisma",
-    "generate:scada_db1_kjy": "npx prisma generate --schema=./prisma/scada_db1_kjy.prisma",
-
-    "start:bun": "bun run --watch src/app.ts",
-    "start:bun:prod": "bun run src/app.ts",
+    "push:main": "npx prisma db push --schema=./prisma/main_db.prisma",
+    "studio:main": "npx prisma studio --schema=./prisma/main_db.prisma",
+    "pull:main": "npx prisma db pull --schema=./prisma/main_db.prisma",
+    "generate:main": "npx prisma generate --schema=./prisma/main_db.prisma",
+    "start:dev": "nodemon src/app.ts",
+    "start:dev:bun": "bun run --watch src/app.ts",
     "start:prod": "ts-node src/app.ts",
-    "start:dev": "nodemon src/app.ts"
+    "start:prod:bun": "bun run src/app.ts"
   },
   "author": "estotriramdani",
   "license": "ISC",
