--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL_MAIN_DB=
+DATABASE_URL_AUTH_DB=
 REFRESH_TOKEN_SECRET=f45c503d-6de6-400f-ac50-7774b2d76385
 ACCESS_TOKEN_SECRET=5e7b1b7b-1b7b-4b7b-9b7b-7b1b7b1b7b1b
 MODE=development
