feat: add commands for pulling and generating authentication database schema in package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "push:main": "npx prisma db push --schema=./prisma/main_db.prisma",
     "studio:main": "npx prisma studio --schema=./prisma/main_db.prisma",
     "pull:main": "npx prisma db pull --schema=./prisma/main_db.prisma",
+    "pull:auth": "npx prisma db pull --schema=./prisma/auth_db.prisma",
     "generate:main": "npx prisma generate --schema=./prisma/main_db.prisma",
+    "generate:auth": "npx prisma generate --schema=./prisma/auth_db.prisma",
     "start:dev": "nodemon src/app.ts",
     "start:dev:bun": "bun run --watch src/app.ts",
     "start:prod": "ts-node src/app.ts",
